# Python-Pypi-Fetch-Top-Projects

./: .gitignore  .pre-commit-config.yaml  README.rst  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: pre-commit.yml
pypi_top_projects/: __init__.py  controller.py  main.py
pypi_top_projects/key_file/: open-university-345313-8607987b0ff9.json
pypi_top_projects/models/: package.py
pypi_top_projects/utilities/: big_query.py  configuration.py  database.py
